# pdp

./: .claude-code-hooks.json  .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  Taskfile.yml  backtest_multiday.py  docker-compose.yml  monitor.pl  pdp-live.ps1  pdp.ps1  pyproject.toml  reset_paper.py  skills-lock.json  start_strategy.sh
backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: CLAUDE.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_instruments.py  0003_market_bars.py  0006_broker_costs.py  0009_backtest.py  0010_alerts.py  0011_push_subscriptions.py  0013_broker_sync_tables.py  0014_instruments_freeze_qty.py  0015_orders_strategy_id_index.py  b5706a2edae9_add_strategyleg_table.py
backend/backtest/: CLAUDE.md  compare.py  daily_flow.py  run.py  strangle_run.py  strangle_walkforward.py  sweep_all.py
backend/backtest/configs/: options_short_straddle.yaml  st10_15m_otm1.yaml  st10_15m_otm2.yaml  st10_2_15m_atm.yaml  st10_2_5m_otm1.yaml  st3_1_5m_otm1.yaml  strangle_banknifty_hedged.yaml  strangle_delta.yaml  strangle_delta_hedged.yaml  strangle_nifty_hedged.yaml  strangle_premium.yaml  strangle_premium_hedged.yaml  strangle_sensex_hedged.yaml
backend/pdp/: __main__.py  deps.py  logging.py  main.py  schemas.py  settings.py
backend/pdp/alerts/: __init__.py  channels.py  enums.py  evaluator.py  models.py  routes.py  schemas.py  service.py  tests.py
backend/pdp/backtest/: CLAUDE.md  __init__.py  chain_loader.py  commissions.py  completeness.py  day_loader.py  engine.py  job_handlers.py  models.py  options_replay.py  options_strategy.py  paper_compare.py  replay.py  routes.py  schemas.py  sim.py  store.py  strangle_config.py  strangle_loader.py  strangle_report.py  strangle_sim.py  strategy_config.py  sweep_engine.py  warehouse_routes.py
backend/pdp/broker_sync/: CLAUDE.md  __init__.py  backfill.py  client.py  eod_reconcile.py  intraday_poller.py  models.py  routes.py  scheduler.py  schemas.py  service.py  snapshots.py
backend/pdp/cli/: CLAUDE.md  __init__.py  backtest_commands.py  core.py  strategy_commands.py
backend/pdp/db/: session.py
backend/pdp/events/: CLAUDE.md  __init__.py  hub.py  models.py  models_db.py  positions.py  routes.py  schemas.py  service.py  store.py  writer.py
backend/pdp/housekeeping/: __init__.py  routes.py  schemas.py  tasks.py
backend/pdp/indicators/: CLAUDE.md  __init__.py  candlestick.py  elder_impulse.py  ema.py  engine.py  fib_levels.py  fvg.py  levels_store.py  macd.py  market_profile.py  period_levels.py  pivots.py  psar.py  registry.py  rsi.py  supertrend.py  vwap.py  vwma.py  (+2 more)
backend/scripts/: CLAUDE.md  README.md  audit_options_coverage.py  audit_strangle_data.py  backfill_expired_options.py  backfill_levels.py  backfill_market_bars.py  backfill_options_gap.py  backfill_spot.py  backfill_underlying.py  backfill_vix.py  broker_sync.py  ensure_port_free.py  expiry_analysis.py  find_thin.py  guard_market_hours.py  ingest_backtest_run.py  opensearch_cleanup.py  report_expiry_gaps.py  seed_expiry_calendar.py  seed_expiry_from_bhavcopy.py  trade_day.py  validate_options_warehouse.py  warmup_premarket.py
backend/strategies/: MultiTimeFrameSelling.txt  directional_strangle.yaml  directional_strangle_banknifty.yaml  directional_strangle_nifty.yaml  directional_strangle_sensex.yaml  example.yaml.tpl
backend/tests/: CLAUDE.md  conftest.py  test_api_hardening.py  test_app_start_log.py  test_backtest.py  test_expiry_calendar.py  test_gap_backfill.py  test_gap_interior.py  test_housekeeping_tasks.py  test_instruments_api.py  test_lifespan_required_groups.py  test_market_hours_guard.py  test_mongo.py  test_openapi_contract.py  test_ops_safety.py  test_option_bars_collection.py  test_order_preflight.py  test_runtime_groups.py  test_settings.py  test_warehouse_coverage.py  test_warehouse_feed.py
(+1593 files in other folders)
