[project]
name = "pdp"
version = "0.1.0"
description = "OpenSpec-driven option trading and investment platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "prasannait11", email = "prasannait11@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "msgspec>=0.18",
    "polars>=1.18",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "websockets>=14",
    "click>=8.1",
    "dhanhq>=2.2.0",
    "motor>=3.4",
    "asyncpg>=0.31.0",
    "py-vollib-vectorized>=0.1.1",
    "rich>=13.7",
    "lightgbm>=4.3",
    "pywebpush>=2.0",
    "opensearch-py[async]>=2.6",
    "yfinance>=1.5.1",
    "nsepython>=2.97",
    "feedparser>=6.0.12",
    "vadersentiment>=3.3.2",
]

[project.scripts]
pdp = "pdp.cli:main"
pdp-api = "pdp.runtime.entrypoints:run_api"
pdp-engine = "pdp.runtime.entrypoints:run_engine"
pdp-ops = "pdp.runtime.entrypoints:run_ops"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdp"]

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "ASYNC", "S"]
# B008: FastAPI's Depends/Query in defaults is idiomatic
# S101: assert in tests is fine
# S104: 0.0.0.0 bind is intentional in dev
ignore = ["S101", "S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]

[tool.pyright]
include = ["pdp"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]
